--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -10,147 +10,154 @@
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="#212121">
+            android:background="#212121"><![CDATA[
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_height="fill_parent"
-            android:layout_width="fill_parent"
-            android:orientation="vertical"
-            android:background="#212121">
+        >
 
+        ]]></ScrollView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Current Bench (lbs):"
-        android:id="@+id/benchText"
-        android:layout_gravity="left|top"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:gravity="right|center_vertical"
-        android:layout_alignTop="@+id/userBench"
-        android:layout_centerHorizontal="true" />
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Set Bench"
-                android:id="@+id/setBench"
-                android:background="#ff6655"
-                android:layout_below="@+id/benchText"
-                android:layout_centerHorizontal="true" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:orientation="vertical"
+        android:background="#212121"
+        android:layout_gravity="right|bottom">
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/userBench"
-                android:layout_gravity="right|top"
-                android:textColor="#46d4e8"
-                android:textSize="20dp"
-                android:layout_toEndOf="@+id/benchText"
-                android:layout_marginTop="20dp"/>
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Current Bench (lbs):"
+    android:id="@+id/benchText"
+    android:layout_gravity="left|top"
+    android:textColor="#ffffff"
+    android:textSize="20dp"
+    android:gravity="right|center_vertical"
+    android:layout_alignTop="@+id/userBench"
+    android:layout_centerHorizontal="true" />
 
-            <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Current Squat (lbs):"
-        android:id="@+id/squatText"
-        android:layout_gravity="left|top"
-                android:inputType="number"
-                android:digits="1234567890"
-        android:textColor="#ffffff"
-        android:textSize="20dp"
-        android:gravity="right|center_vertical"
-                android:layout_alignTop="@+id/userSquat"
-                android:layout_toStartOf="@+id/userBench" />
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Set Bench"
+            android:id="@+id/setBench"
+            android:background="#ff6655"
+            android:layout_below="@+id/benchText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="51dp" />
 
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Set Squat"
-                android:id="@+id/setSquat"
-                android:background="#ff6655"
-                android:layout_below="@+id/squatText"
-                android:layout_alignStart="@+id/setBench" />
 
-            <TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/userSquat"
+            android:id="@+id/userBench"
             android:layout_gravity="right|top"
             android:textColor="#46d4e8"
             android:textSize="20dp"
-            android:layout_toEndOf="@+id/squatText"
-            android:layout_below="@+id/setBench"
-                android:layout_marginTop="10dp"/>
+            android:layout_toEndOf="@+id/benchText"
+            android:layout_marginTop="20dp"/>
 
-            <TextView
+        <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Current Squat (lbs):"
+    android:id="@+id/squatText"
+    android:layout_gravity="left|top"
+            android:inputType="number"
+            android:digits="1234567890"
+    android:textColor="#ffffff"
+    android:textSize="20dp"
+    android:gravity="right|center_vertical"
+            android:layout_below="@+id/userSquat"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Set Squat"
+            android:id="@+id/setSquat"
+            android:background="#ff6655"
+            android:layout_below="@+id/squatText"
+            android:layout_alignStart="@+id/setBench"
+            android:layout_marginTop="51dp" />
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Current DeadLift (lbs):"
-        android:id="@+id/deadliftText"
+        android:id="@+id/userSquat"
+        android:layout_gravity="right|top"
+        android:textColor="#46d4e8"
         android:textSize="20dp"
-        android:textColor="#ffffff"
-                android:layout_alignTop="@+id/userDeadlift"
-                android:layout_toStartOf="@+id/userSquat" />
+        android:layout_toEndOf="@+id/squatText"
+        android:layout_below="@+id/setBench"
+            android:layout_marginTop="10dp"/>
 
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Set DeadLift"
-                android:id="@+id/setDeadLift"
-                android:background="#ff6655"
-                android:layout_below="@+id/deadliftText"
-                android:layout_alignStart="@+id/setSquat" />
+        <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Current DeadLift (lbs):"
+    android:id="@+id/deadliftText"
+    android:textSize="20dp"
+    android:textColor="#ffffff"
+            android:layout_below="@+id/userDeadlift"
+            android:layout_alignEnd="@+id/userSquat" />
 
-            <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:id="@+id/userDeadlift"
-            android:layout_gravity="right|center_vertical"
-            android:textSize="20dp"
-            android:textColor="#46d4e8"
-            android:layout_toEndOf="@+id/deadliftText"
-            android:layout_below="@+id/setSquat"
-                android:layout_marginTop="10dp"/>
+            android:text="Set DeadLift"
+            android:id="@+id/setDeadLift"
+            android:background="#ff6655"
+            android:layout_below="@+id/deadliftText"
+            android:layout_alignStart="@+id/setSquat"
+            android:layout_marginTop="51dp" />
 
-
-            <TextView
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MileTime (sec):"
-        android:id="@+id/mileText"
-        android:layout_gravity="left|top"
-        android:textColor="#ffffff"
+        android:id="@+id/userDeadlift"
+        android:layout_gravity="right|center_vertical"
         android:textSize="20dp"
-                android:layout_alignTop="@+id/userTime"
-                android:layout_centerHorizontal="true" />
+        android:textColor="#46d4e8"
+        android:layout_toEndOf="@+id/deadliftText"
+        android:layout_below="@+id/setSquat"
+            android:layout_marginTop="10dp"/>
 
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Set MileTime"
-                android:id="@+id/setMileTime"
-                android:background="#ff6655"
-                android:layout_below="@+id/mileText"
-                android:layout_alignStart="@+id/setDeadLift" />
 
-            <TextView
-            android:layout_width="wrap_content"
+        <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="MileTime (sec):"
+    android:id="@+id/mileText"
+    android:layout_gravity="left|top"
+    android:textColor="#ffffff"
+    android:textSize="20dp"
+            android:layout_below="@+id/userTime"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:id="@+id/userTime"
-            android:layout_gravity="right|top"
-            android:textColor="#46d4e8"
-            android:textSize="20dp"
-            android:textIsSelectable="true"
-            android:layout_toEndOf="@+id/mileText"
-            android:layout_below="@+id/setDeadLift"
-                android:layout_marginTop="10dp"/>
+            android:text="Set MileTime"
+            android:id="@+id/setMileTime"
+            android:background="#ff6655"
+            android:layout_below="@+id/mileText"
+            android:layout_alignStart="@+id/setDeadLift"
+            android:layout_marginTop="51dp" />
+
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userTime"
+        android:layout_gravity="right|top"
+        android:textColor="#46d4e8"
+        android:textSize="20dp"
+        android:textIsSelectable="true"
+        android:layout_toEndOf="@+id/mileText"
+        android:layout_below="@+id/setDeadLift"
+            android:layout_marginTop="10dp"/>
 
 
-        </RelativeLayout>>
-
-        </ScrollView>
+    </RelativeLayout>
 
 </FrameLayout>
