--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -50,7 +50,7 @@
 
             <ListView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="130dp"
             android:id="@+id/listView2"
             android:textAlignment="center"
             android:animateLayoutChanges="true"
@@ -58,7 +58,7 @@
             android:layout_gravity="center_horizontal|bottom" />
             <ListView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
                 android:id="@+id/listView3"
                 android:textAlignment="center"
                 android:animateLayoutChanges="true"
