--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,13 +13,14 @@
     <item
         android:id="@+id/uName"
         android:title=""
+        android:orderInCategory="2"
         android:showAsAction="always|withText"
         />
     <item
         android:id="@+id/home"
         android:title="home"
-        android:orderInCategory="100"
-        android:icon="@drawable/ic_list_black_24dp"
+        android:orderInCategory="1"
+        android:icon="@mipmap/ic_launcher"
         android:showAsAction="always"
         />
 </menu>
