--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -21,7 +21,8 @@
         android:layout_width="fill_parent"
         android:orientation="vertical"
         android:background="#212121"
-        android:layout_gravity="right|bottom">
+        android:layout_gravity="right|bottom"
+        >
 
 
     <TextView
@@ -29,11 +30,12 @@
         android:layout_height="wrap_content"
         android:text="Weight Loss Goal (lbs): "
         android:id="@+id/editnametext"
-        android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:layout_alignTop="@+id/currentWeightGoal"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:paddingTop="30dp"
+        />
 
         <Button
             android:layout_width="100dp"
@@ -42,18 +44,18 @@
             android:id="@+id/setWeight"
             android:background="#46d4e8"
             android:layout_below="@+id/editnametext"
-            android:layout_alignStart="@+id/setWeightG" />
+            android:layout_alignStart="@+id/setWeightG"
+            />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentWeightGoal"
-        android:layout_gravity="right|top"
         android:textColor="#46d4e8"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/editnametext"
-        android:layout_marginTop="20dp"
+
         />
 
     <TextView
@@ -61,11 +63,13 @@
         android:layout_height="wrap_content"
         android:text="Weight Gain Goal (lbs): "
         android:id="@+id/weightGain"
-        android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:layout_below="@+id/setWeight"
-        android:layout_alignStart="@+id/editnametext" />
+        android:layout_alignStart="@+id/editnametext"
+
+
+        />
 
         <Button
             android:layout_width="100dp"
@@ -74,19 +78,19 @@
             android:id="@+id/setWeightG"
             android:background="#46d4e8"
             android:layout_below="@+id/currentWeightGainGoal"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentWeightGainGoal"
-        android:layout_gravity="right|top"
         android:textColor="#46d4e8"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/weightGain"
         android:layout_below="@+id/setWeight"
-        android:layout_marginTop="10dp"
+
         />
 
 
@@ -95,11 +99,11 @@
         android:layout_height="wrap_content"
         android:text="Bench Goal (lbs): "
         android:id="@+id/BenchText"
-        android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:layout_alignTop="@+id/currentBenchGoal"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        />
 
         <Button
             android:layout_width="100dp"
@@ -114,13 +118,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentBenchGoal"
-        android:layout_gravity="right|top"
         android:textColor="#46d4e8"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/BenchText"
         android:layout_below="@+id/setWeightG"
-        android:layout_marginTop="10dp"
+
         />
 
 
@@ -129,11 +132,11 @@
         android:layout_height="wrap_content"
         android:text="Squat Goal (lbs): "
         android:id="@+id/SquatText"
-        android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:layout_below="@+id/setBench"
-        android:layout_alignStart="@+id/BenchText" />
+        android:layout_alignStart="@+id/BenchText"
+        />
 
         <Button
             android:layout_width="100dp"
@@ -148,13 +151,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentSquatGoal"
-        android:layout_gravity="right|top"
         android:textColor="#46d4e8"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/SquatText"
         android:layout_below="@+id/setBench"
-        android:layout_marginTop="10dp"
         />
 
 
@@ -164,11 +165,13 @@
         android:layout_height="wrap_content"
         android:text="DeadLift Goal (lbs): "
         android:id="@+id/DeadLiftText"
-        android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
+        android:layout_below="@+id/currentDeadLiftGoal"
         android:layout_alignTop="@+id/currentDeadLiftGoal"
-        android:layout_alignStart="@+id/SquatText" />
+        android:layout_alignStart="@+id/SquatText"
+
+        />
 
         <Button
             android:layout_width="100dp"
@@ -177,19 +180,20 @@
             android:id="@+id/setDeadLift"
             android:background="#46d4e8"
             android:layout_centerVertical="true"
-            android:layout_alignStart="@+id/setSquat" />
+            android:layout_below="@+id/DeadLiftText"
+
+            android:layout_alignStart="@+id/setSquat"
+            />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentDeadLiftGoal"
-        android:layout_gravity="right|top"
         android:textColor="#46d4e8"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/DeadLiftText"
         android:layout_below="@+id/setSquat"
-        android:layout_marginTop="10dp"
         />
 
 
@@ -199,11 +203,11 @@
         android:layout_height="wrap_content"
         android:text="MileTime Goal (sec): "
         android:id="@+id/MileTimeText"
-        android:layout_gravity="left|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:layout_below="@+id/currentMileTimeGoal"
-        android:layout_alignEnd="@+id/weightGain" />
+        android:layout_below="@+id/setDeadLift"
+        android:layout_alignEnd="@+id/weightGain"
+        />
 
         <Button
             android:layout_width="100dp"
@@ -213,19 +217,18 @@
             android:background="#46d4e8"
             android:layout_below="@+id/MileTimeText"
             android:layout_alignStart="@+id/setDeadLift"
-            android:layout_marginTop="50dp" />
+
+            />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentMileTimeGoal"
-        android:layout_gravity="right|top"
         android:textColor="#46d4e8"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/MileTimeText"
         android:layout_below="@+id/setDeadLift"
-        android:layout_marginTop="10dp"
         />
 
 
