--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -6,18 +6,19 @@
 
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Leaderboard:"
         android:id="@+id/LeaderTitle"
         android:textSize="20dp"
-        android:layout_below="@+id/PointsView"
         android:background="#010101"
         android:autoText="true"
-        android:textColor="#46d4e8" />
+        android:textColor="#46d4e8"
+        android:layout_below="@+id/with"
+        android:layout_alignStart="@+id/listView4" />
 
         <ListView
-            android:layout_width="300dp"
+            android:layout_width="200dp"
             android:layout_height="70dp"
             android:id="@+id/listView4"
             android:divider="#010101"
