--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -296,8 +296,16 @@
 
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your BMI is:"
+            android:id="@+id/bmiLabel"
+            android:layout_below="@+id/weightButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="33dp"
 
-
+            android:textColor="#ffffff" />
 
 
     </RelativeLayout>
